# jaoc

./: .gitmodules  Cargo.toml  README.md
src/: config.rs  download.rs  main.rs  scaffold.rs
src/commands/: download.rs  mod.rs  new.rs  next.rs  regen.rs  run.rs  start.rs  watch.rs
src/providers/: mod.rs
src/providers/aoc/: download.rs  mod.rs
src/providers/ebc/: download.rs  mod.rs
src/utils/: config.rs  files.rs  mod.rs  net.rs
templates/aoc/: day.rs
templates/ebc/: day.rs
