[package]
name = "jaoc"
version = "0.1.0"
edition = "2024"
authors = ["Jeremy Ianne <jeremy.ianne26@gmail.com>"]
description = "A CLI tool to scaffold, run, and watch Advent of Code projects in Rust."
license = "MIT"
repository = "https://github.com/jviguy/jaoc"
readme = "README.md"
keywords = ["advent-of-code", "aoc", "cli", "scaffolding"]
categories = ["command-line-utilities", "development-tools"]

exclude = [
    "aoc-template/",
]
include = [
    "aoc-template/src/bin/day01.rs",
]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
dotenv = "0.15.0"
notify = "8.2.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
